added heads up component

--- a/src/pages/UserPage/UserPage.module.scss
+++ b/src/pages/UserPage/UserPage.module.scss
@@ -4,8 +4,8 @@
     justify-content: flex-start;
     top:4vh;
     align-items: center;
-    background-color: pink;
     width: 100vw;
     position: fixed;
     height: 100vh;
+    background-color: white;
 }
