--- a/src/pages/ChatsPage/ChatsPage.module.scss
+++ b/src/pages/ChatsPage/ChatsPage.module.scss
@@ -4,8 +4,10 @@
     justify-content: flex-start;
     top:4vh;
     align-items: center;
-    background-color: purple;
+    background-image:url(https://i.makeagif.com/media/8-23-2018/h3pGxo.gif);
+    background-size: cover;
     width: 100vw;
     position: fixed;
     height: 100vh;
+    margin-top: 0vmin
 }
