--- a/src/pages/UserPage/UserPage.module.scss
+++ b/src/pages/UserPage/UserPage.module.scss
@@ -7,5 +7,7 @@
     width: 100vw;
     position: fixed;
     height: 100vh;
-    background-color: white;
+    background-image:url(https://i.gifer.com/1pX9.gif);
+    background-size: cover;
+
 }
