--- a/src/pages/HomePage/HomePage.module.scss
+++ b/src/pages/HomePage/HomePage.module.scss
@@ -4,7 +4,8 @@
     justify-content: flex-start;
     top:4vh;
     align-items: center;
-    background-color: green;
+    background-image:url(https://i.gifer.com/3EQO.gif);
+    background-size: cover;
     width: 100vw;
     position: fixed;
     height: 100vh;
