properpage css for all pages

--- a/src/components/NavBar/NavBar.module.scss
+++ b/src/components/NavBar/NavBar.module.scss
@@ -2,7 +2,7 @@
     display: flex;
     justify-content: space-around;
     top: 0;
-    height: 4vh;
+    height: 60px;
     background-color: rgba(34,41,53);
     border-radius: 5px;
     width: 100vw;
