--- a/src/pages/ChatsPage/ChatsPage.module.scss
+++ b/src/pages/ChatsPage/ChatsPage.module.scss
@@ -2,12 +2,12 @@
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
-    top:4vh;
+    top:60px;
     align-items: center;
-    background-image:url(https://i.makeagif.com/media/8-23-2018/h3pGxo.gif);
     background-size: cover;
     width: 100vw;
     position: fixed;
-    height: 100vh;
+    height: 98vh;
+    background-color: pink;
     margin-top: 0vmin
 }
