--- a/src/pages/HomePage/HomePage.module.scss
+++ b/src/pages/HomePage/HomePage.module.scss
@@ -1,12 +1,10 @@
 .HomePage{
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    top:4vh;
-    align-items: center;
-    background-image:url(https://i.gifer.com/3EQO.gif);
-    background-size: cover;
-    width: 100vw;
-    position: fixed;
+    background-color: green;
+    top:60px;
     height: 100vh;
+    width: 100vw;
+    // display: flex;
+    // flex-direction: column;
+    // align-items: center;
+    // justify-content: center;
 }
