--- a/src/pages/HomePage/HomePage.module.scss
+++ b/src/pages/HomePage/HomePage.module.scss
@@ -1,4 +1,12 @@
 .HomePage{
+    h1{
+        margin-top: 30px;
+        position: absolute;
+        top:30px;
+        width: 100vw;
+        margin-left: 120px;
+        color: white;
+    }
     background-color: green;
     top:60px;
     height: 100vh;
