--- a/src/components/HomePosts/HomePosts.module.scss
+++ b/src/components/HomePosts/HomePosts.module.scss
@@ -1,12 +1,12 @@
 .HomePosts{
     position: absolute;
     top: 120px;
-    left: 20vw;
+    justify-self: center;
     position: absolute;
-    width: 60vw;
+    width: 100vw;
     height: 80vh;
     background-color: yellow;
-    border-radius: 15px;
+
     overflow-y: scroll;
    
     
