--- a/src/components/UserAside/UserAside.module.scss
+++ b/src/components/UserAside/UserAside.module.scss
@@ -1,13 +1,13 @@
 .UserAside{
     position: absolute;
     margin-top: 60px;
-    left: 60px;
+    left: 5vw;
     width: 20vw;
     height: 80vh;
     display: flex;
     flex-direction: column;
     background-color: red;
-    border-radius: 15px;
+    color: white;
     justify-content: center;
     align-items: center;
 
