--- a/src/components/ChatsFlow/ChatsFlow.module.scss
+++ b/src/components/ChatsFlow/ChatsFlow.module.scss
@@ -2,10 +2,10 @@
     background-color: purple;
     position: absolute;
     margin-top: 60px;
-    right: 60px;
+    right: 5vw;
     width: 70vw;
     height: 80vh;
-    border-radius: 15px;
+
     display: flex;
     flex-direction: column;
     align-items: center;
