--- a/src/components/UserPosts/UserPosts.module.scss
+++ b/src/components/UserPosts/UserPosts.module.scss
@@ -2,10 +2,9 @@
     background-color: blue;
     position: absolute;
     margin-top: 60px;
-    right: 60px;
+    right: 5vw;
     width: 70vw;
     height: 80vh;
-    border-radius: 15px;
     display: flex;
     flex-direction: column;
     align-items: center;
