--- a/src/components/ChatsAside/ChatsAside.module.scss
+++ b/src/components/ChatsAside/ChatsAside.module.scss
@@ -1,13 +1,32 @@
 .ChatsAside{
     position: absolute;
-    margin-top: 60px;
+    margin-top: 5vmin;
     left: 5vw;
     width: 20vw;
-    height: 80vh;
+    height: 85vh;
     display: flex;
     flex-direction: column;
-    background-color: orangered;
-
+    background-color: pink;
+    color: white;
     justify-content: center;
     align-items: center;
+    overflow-y: scroll;
+    border: solid 1px white;
+
+}
+
+@media (max-width:900px) {
+    .ChatsAside{
+        position: absolute;
+    margin-top: 5vmin;
+    left: 5vw;
+    width: 90vw;
+    height: 10vh;
+    display: flex;
+    flex-direction: column;
+    background-color: red;
+    color: white;
+    justify-content: center;
+    align-items: center;
+    }
 }
