--- a/src/components/NavBar/NavBar.module.scss
+++ b/src/components/NavBar/NavBar.module.scss
@@ -3,8 +3,7 @@
     align-items: center;
     justify-content: space-around;
     top: 0;
-    height: 60px;
-    background-color: rgba(34,41,53);
+    background-color: black;
     width: 100vw;
     color:white;
     position: fixed;
@@ -15,7 +14,8 @@
             width: 33vw;
             border-color: white;
             font-size: 25px;
-            height: 60px;
+            height: 5vmin;
+
         }
         .titles:hover{
             background-color:rgb(170,218,250);;
@@ -25,3 +25,15 @@
 
         }
     }
+
+@media (max-width:900px) {
+    .NavBarDiv{
+        margin-top: 90vh;
+        height: 10vh;
+        bottom: 0;
+        z-index: 1;
+        .titles{
+            height: 10vh;
+        }
+    }
+}
