--- a/src/components/UserPosts/UserPosts.module.scss
+++ b/src/components/UserPosts/UserPosts.module.scss
@@ -1,12 +1,29 @@
 .UserPosts{
     background-color: blue;
     position: absolute;
-    margin-top: 60px;
+    margin-top: 5vmin;
     right: 5vw;
     width: 70vw;
-    height: 80vh;
+    height: 90vh;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    border: solid 1px white;
+
+}
+
+
+@media (max-width:900px) {
+    .UserPosts{
+        background-color: blue;
+        position: absolute;
+        margin-top: 15vmin;
+        width: 90vw;
+        height: 90vh;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
 }
