--- a/src/pages/ChatsPage/ChatsPage.module.scss
+++ b/src/pages/ChatsPage/ChatsPage.module.scss
@@ -2,12 +2,20 @@
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
-    top:60px;
+    top:5vmin;
     align-items: center;
     background-size: cover;
     width: 100vw;
     position: fixed;
     height: 98vh;
-    background-color: pink;
+    background-color: black;
     margin-top: 0vmin
+}
+
+
+@media (max-width:900px){
+    .ChatsPage{
+    top:0;
+
+    }
 }
