--- a/src/pages/HomePage/HomePage.module.scss
+++ b/src/pages/HomePage/HomePage.module.scss
@@ -1,18 +1,45 @@
 .HomePage{
     h1{
-        margin-top: 30px;
-        position: absolute;
-        top:30px;
+        display: flex;
+        justify-content: center;
+        position: fixed;
         width: 100vw;
-        margin-left: 120px;
         color: white;
+        font-size: 20px;
+        color:white;
+        top:5vh;
+        z-index: 1;
+        background-color:black;
+    
+        
+
+
     }
-    background-color: green;
-    top:60px;
+    background-color: black;
+    top:5vmin;
     height: 100vh;
     width: 100vw;
     // display: flex;
     // flex-direction: column;
     // align-items: center;
     // justify-content: center;
+}
+
+@media (max-width:900px) {
+    h1{
+
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-start;
+        position: fixed;
+        width: 100vw;
+        padding-left: 5vw;
+        color: white;
+
+        z-index: 1;
+        top:0vh;
+        margin-top:0 ;
+
+
+    }
 }
