--- a/src/pages/UserPage/UserPage.module.scss
+++ b/src/pages/UserPage/UserPage.module.scss
@@ -3,12 +3,28 @@
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
-    top:60px;
+    top:5vmin;
     align-items: center;
     width: 100vw;
     position: fixed;
     height: 100vh;
-    background-color: yellow;
+    background-color: black;
     background-size: cover;
+    h1{
+        position: absolute;
+        width: 100vw;
+        margin-left: 10vw;
+        color: white;
+        font-size: 25px;
+    }
 
+}
+
+
+
+@media (max-width:900px){
+    .UserPage{
+    top:0;
+
+    }
 }
