--- a/src/components/ChatsAside/ChatsAside.module.scss
+++ b/src/components/ChatsAside/ChatsAside.module.scss
@@ -1,31 +1,35 @@
 .ChatsAside{
     position: absolute;
-    margin-top: 5vmin;
+    margin-top: 6vmin;
     left: 5vw;
     width: 20vw;
     height: 85vh;
     display: flex;
     flex-direction: column;
-    background-color: pink;
-    color: white;
     justify-content: center;
     align-items: center;
     overflow-y: scroll;
     border: solid 1px white;
-
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px;
+    animation: fadeIn 0.5s;
+    color: black;
 }
+
+@keyframes fadeIn {
+    0% { opacity: 0; }
+    100% { opacity: 1; }
+  }
 
 @media (max-width:900px) {
     .ChatsAside{
         position: absolute;
-    margin-top: 5vmin;
+    margin-top: 10vmin;
     left: 5vw;
     width: 90vw;
     height: 10vh;
     display: flex;
     flex-direction: column;
-    background-color: red;
-    color: white;
+    color: black;
     justify-content: center;
     align-items: center;
     }
