--- a/src/components/ChatsFlow/ChatsFlow.module.scss
+++ b/src/components/ChatsFlow/ChatsFlow.module.scss
@@ -1,5 +1,4 @@
 .ChatsFlow{
-    background-color: purple;
     position: absolute;
     margin-top: 5vmin;
     right: 5vw;
@@ -11,13 +10,17 @@
     justify-content: center;
     overflow-y: scroll;
     border: solid 1px white;
-
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
+    border-radius: 7px;
+    animation: fadeIn 0.5s;
 }
 
-
+@keyframes fadeIn {
+    0% { opacity: 0; }
+    100% { opacity: 1; }
+  }
 @media (max-width:900px) {
     .ChatsFlow{
-        background-color: blue;
         position: absolute;
         margin-top: 25vmin;
         width: 90vw;
