--- a/src/components/NavBar/NavBar.module.scss
+++ b/src/components/NavBar/NavBar.module.scss
@@ -3,11 +3,13 @@
     align-items: center;
     justify-content: space-around;
     top: 0;
-    background-color: black;
+    background-color: white;
     width: 100vw;
-    color:white;
     position: fixed;
-        .titles{
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
+    .titles{
+
+            color: black;
             display: flex;
             justify-content: center;
             align-items: center;
@@ -15,6 +17,7 @@
             border-color: white;
             font-size: 25px;
             height: 5vmin;
+            border-radius: 6px;
 
         }
         .titles:hover{
