--- a/src/components/UserAside/UserAside.module.scss
+++ b/src/components/UserAside/UserAside.module.scss
@@ -1,32 +1,37 @@
 .UserAside{
     position: absolute;
-    margin-top: 5vmin;
+    margin-top: 10vmin;
     left: 5vw;
     width: 20vw;
     height: 90vh;
     display: flex;
     flex-direction: column;
-    background-color: red;
-    color: white;
+    color: black;
     justify-content: center;
     align-items: center;
     border: solid 1px white;
+    animation: fadeIn 0.5s;
+    margin:5px;
 
 
 }
 
+@keyframes fadeIn {
+    0% { opacity: 0; }
+    100% { opacity: 1; }
+  }
+
 @media (max-width:900px) {
     .UserAside{
-        position: absolute;
+    position: absolute;
     margin-top: 5vmin;
     left: 5vw;
     width: 90vw;
-    height: 5vh;
+    height: 30vh;
     display: flex;
     flex-direction: column;
-    background-color: red;
-    color: white;
     justify-content: center;
     align-items: center;
+    color: black;
     }
 }
