--- a/src/pages/HomePage/HomePage.module.scss
+++ b/src/pages/HomePage/HomePage.module.scss
@@ -1,30 +1,34 @@
 .HomePage{
-    h1{
-        display: flex;
-        justify-content: center;
-        position: fixed;
-        width: 100vw;
-        color: white;
-        font-size: 20px;
-        color:white;
-        top:5vh;
-        z-index: 1;
-        background-color:black;
-    
-        
-
-
-    }
-    background-color: black;
     top:5vmin;
     height: 100vh;
     width: 100vw;
-    // display: flex;
-    // flex-direction: column;
-    // align-items: center;
-    // justify-content: center;
+ 
+    #name{
+        display: flex;
+        justify-content: flex-start;
+        position: fixed;
+        width: 100vw;
+        padding-left: 5vw;
+        color: white;
+        font-size: 25px;
+        color:white;
+        top:3.5vmin;
+        z-index: 1;
+        background-color:white;
+        color: black;
+
+    }
+    .hidden{
+        animation: fadeIn 1s ;
+    }
+
 }
 
+
+@keyframes fadeIn {
+  0% { opacity: 0; }
+  100% { opacity: 1; }
+}
 @media (max-width:900px) {
     h1{
 
