--- a/src/pages/UserPage/UserPage.module.scss
+++ b/src/pages/UserPage/UserPage.module.scss
@@ -8,15 +8,9 @@
     width: 100vw;
     position: fixed;
     height: 100vh;
-    background-color: black;
+    background-color: white;
     background-size: cover;
-    h1{
-        position: absolute;
-        width: 100vw;
-        margin-left: 10vw;
-        color: white;
-        font-size: 25px;
-    }
+    overflow-y: scroll;
 
 }
 
