--- a/src/pages/HomePage/HomePage.module.scss
+++ b/src/pages/HomePage/HomePage.module.scss
@@ -7,12 +7,13 @@
         display: flex;
         justify-content: flex-start;
         position: fixed;
-        width: 100vw;
-        padding-left: 5vw;
+        padding-left: 2.5vw;
+        padding-right: 2.5vw;
         color: white;
         font-size: 25px;
         color:white;
-        top:3.5vmin;
+        top:3vmin;
+        border-radius: 7px;
         z-index: 1;
         background-color:white;
         color: black;
