--- a/src/components/HomePosts/HomePosts.module.scss
+++ b/src/components/HomePosts/HomePosts.module.scss
@@ -13,8 +13,7 @@
     height: 90vh;
     border-radius: 7px;
     box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
-
-    overflow-y: scroll;
+    overflow-x:hidden;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -38,6 +37,7 @@
             width: 85vw;
             height: 75vh;
             margin: 5px;
+            margin-right: 22.5px;
             color: black;
             border: solid white 1px;
             box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
