--- a/src/components/NavBar/NavBar.module.scss
+++ b/src/components/NavBar/NavBar.module.scss
@@ -25,6 +25,7 @@
             flex-direction: row;
             justify-content: center;
             display: flex;
+            color: white;
 
         }
     }
