--- a/src/components/UserPosts/UserPosts.module.scss
+++ b/src/components/UserPosts/UserPosts.module.scss
@@ -1,19 +1,41 @@
 .UserPosts{
 
     position: absolute;
-    margin-top: 10vmin;
     right: 5vw;
     width: 70vw;
     height: 90vh;
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
     border: solid 1px white;
     box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
     margin: 5px;
     animation: fadeIn 0.5s;
     border-radius: 7px;
+    overflow-y: scroll;
+    ul{
+
+        list-style-type: none;
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-start;
+
+        width: 65vw;
+        .yourPosts{
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            font-size: 25px;
+            height: 10vh;
+        }
+        li{
+            border-radius: 7px;
+            height: 50vh;
+            margin: 5px;
+            background-color: white;
+            box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
+        }
+    }
 }
 @keyframes fadeIn {
     0% { opacity: 0; }
@@ -22,14 +44,39 @@
 
 @media (max-width:900px) {
     .UserPosts{
-
         position: absolute;
-        margin-top: 40vh;
+        top: 40vh;
         width: 90vw;
-        height: 90vh;
+        height: 100vh;
         display: flex;
         flex-direction: column;
         align-items: center;
-        justify-content: center;
+        justify-content: flex-start;
+
+        ul{
+            padding-right: 7vmin;
+            display: flex;
+            justify-content: flex-start;
+            flex-direction: column;
+            align-items: center;
+            list-style-type: none;
+            .yourPosts{
+                justify-self: flex-start;
+                width: 80vw;
+                height: 5vh;
+            }
+            li{
+                padding: 1vmin;
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                width: 80vw;
+                height: 25vh;
+                margin: 0.5vmin;
+    
+                box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
+
+            }
+        }
     }
 }
