--- a/src/components/LoginForm/LoginForm.module.scss
+++ b/src/components/LoginForm/LoginForm.module.scss
@@ -1,23 +1,25 @@
 .loginDiv{
-    width: 25vmin;
-    height: 25vmin;
+    position: fixed;
+    right: 0;
+    width: 50vw;
+    height: 100vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    font-size: 1vmin;
 
     .title{
         justify-self: center;
         font-family: 'Orbitron', sans-serif;
-        position: fixed;
-        top:20vh;
-        font-size: 2.5vmin;
+        font-size: 50px;
         display: flex;
-        flex-direction: column;
+
         align-items: center;
+        background-color: pink;
         p{
+            background-color: orange;
             margin-top: 0;
-            font-size: 1vmin;
         }
         .buttonDiv{
             width: 25vmin;
@@ -27,26 +29,28 @@
         }
     }
     .loginForm{
-        height: 20vmin;
-        width: 25vmin;
+
+        height:50vh;
+        width: 25vw;
         display: flex;
         flex-direction: column;
         justify-content: center;
         .text{
-            font-size: 1.5vmin;
+            font-size: 20px;
             font-family: 'Gruppo', sans-serif;
             
-            text-shadow: 2px 2px 5px black;
+
         }
         .inputText{
             font-family: 'Gruppo', sans-serif;
             color:white;
-            height: 1.5vmin;
-            background-color: black;
-            border-color: white;
-            border-width: 0.2vmin;
-            border-radius: 10px;
-            box-shadow: 2px 2px 5px black;
+            height: 20px;
+            background-color: white;
+            border-width: 1px;
+            border-color: black;
+            border-radius: 7px;
+            box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
+
         }
         .submit{
             font-size: 1.5vmin;
@@ -54,18 +58,17 @@
             flex-direction: row;
             align-items: center;
             justify-content: center;
-            width: 12.5vmin;
+            width: 10vw;
             font-family: 'Gruppo', sans-serif;
-            background-color: black;
-            border-width: 0.2vmin;
-            border-radius: 10px;
+            box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
             border-color: white;
-            height: 1.5vmin;
-            color:white;
+            height: 20px;
+            color:black;
             margin-top: 1vmin;
             padding-bottom: 0.8vmin;
             padding-top: 0.8vmin;
             margin-bottom: 10vmin;
+
             
         }
         .submit:hover{
