--- a/src/pages/HomePage/HomePage.module.scss
+++ b/src/pages/HomePage/HomePage.module.scss
@@ -4,19 +4,53 @@
     height: 100vh;
     width: 100vw;
     display: flex;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;
-    button{
+    .buttonDiv{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: flex-start;
+        left: 80vw;
+        top:10vh;
         position: absolute;
-        top:11vh;
-        right: 10vw;
-        height: 50px;
-        width: 50px;
-        border-radius: 100px;
-        background-color: white;
-        border-color: white;
-        box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
+        width: 20vw;
+        height: 50vh;
 
+
+            ul{
+                box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
+                width:15vw;
+                height: 40vh;
+                border-radius: 7px;
+                display: flex;
+                justify-content: flex-start;
+                align-self: center;
+                flex-direction: column;
+                list-style-type: none;
+                overflow-y: scroll;
+                li{
+                display: flex;
+                justify-content: center;
+                width: 12.5vw;
+                border-radius: 7px;
+                margin: 2px;
+                background-color: white;
+
+            }
+            }
+
+        button{
+            margin-top: 10px;
+            width: 50px;
+            height: 50px;
+            position: relative;
+            border-radius: 100px;
+            background-color: white;
+            border-color: white;
+            box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
+            
+        }
     }
     #name{
         display: flex;
@@ -38,12 +72,12 @@
         animation: fadeIn 1s ;
     }
     .userInfo{
+        top:10vh;
         display: flex;
         flex-direction: column;
         align-items: center;
         justify-content: flex-start;
         left: 0;
-
         position: absolute;
         color: orange;
         width: 20vw;
@@ -83,8 +117,39 @@
         display: flex;
         flex-direction: column;
         align-self: center;
-        button{
-            right: 5vw;
+        .buttonDiv{
+            position: absolute;
+            left: 0;
+            top:40vh;
+            width: 98vw;
+            height: 6vh;
+
+            display: flex;
+            flex-direction: row-reverse;
+            align-items: center;
+
+                ul{
+                    height: 5vh;
+                    overflow-x: scroll;
+                    flex-direction: row;
+                    width: 80vw;
+                    li{
+                        display: flex;
+                        justify-content: center;
+                        align-items: center;
+                        width: 25vw;
+                        border-radius: 7px;
+                        margin-left: 5vmin;
+                        padding-left: 5px;
+                        padding-right: 5px;
+                    }
+                }
+            button{
+                width: 50px;
+                height:50px;
+                border-radius: 100px;
+                margin: 10px;
+            }
         }
         h1{
 
@@ -103,7 +168,7 @@
          .userInfo{
         display: flex;
         align-items: center;
-        justify-content: flex-start;
+        justify-content: flex-end;
         top: 10vh;
         position: absolute;
         color: orange;
