--- a/src/components/SignUpForm/SignUpForm.module.scss
+++ b/src/components/SignUpForm/SignUpForm.module.scss
@@ -1,10 +1,11 @@
 .signUpFormDiv{
-    width: 25vmin;
-    height: 25vmin;
+    width: 50vw;
+    height: 50vw;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+
 
     .title{
         justify-self: center;
@@ -17,37 +18,40 @@
         align-items: center;
         p{
             margin-top: 0;
-            font-size: 1vmin;
+            font-size:20px;
         }
         .buttonDiv{
-            background-color: red;
-            width: 25vmin;
-            width: 20vmin;
+            width: 25vw;
+
             display: flex;
             flex-direction: row;
         }
     }
     .signUpForm{
-        height: 20vmin;
-        width: 25vmin;
+        height: 70vh;
+        width:100vw;
         display: flex;
         flex-direction: column;
+        padding-left: 40vw;
         justify-content: center;
+
         .text{
-            font-size: 1.5vmin;
+            font-size: 20px;
             font-family: 'Gruppo', sans-serif;
             
-            text-shadow: 2px 2px 5px black;
+
         }
         .inputText{
             font-family: 'Gruppo', sans-serif;
             color:white;
-            height: 1.5vmin;
-            background-color: black;
-            border-color: white;
-            border-width: 0.2vmin;
-            border-radius: 10px;
-            box-shadow: 2px 2px 5px black;
+            height: 20px;
+            width: 60vw;
+            background-color: white;
+            border-width: 1px;
+            border-color: black;
+            border-radius: 7px;
+            box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
+
         }
         .submit{
             font-size: 1.5vmin;
@@ -55,18 +59,17 @@
             flex-direction: row;
             align-items: center;
             justify-content: center;
-            width: 12.5vmin;
+            width: 10vw;
             font-family: 'Gruppo', sans-serif;
-            background-color: black;
-            border-width: 0.2vmin;
-            border-radius: 10px;
+            box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
             border-color: white;
-            height: 1.5vmin;
-            color:white;
+            height: 20px;
+            color:black;
             margin-top: 1vmin;
             padding-bottom: 0.8vmin;
             padding-top: 0.8vmin;
             margin-bottom: 10vmin;
+
             
         }
         .submit:hover{
