added potential backgrounds

--- a/src/components/Post/Post.module.scss
+++ b/src/components/Post/Post.module.scss
@@ -4,6 +4,9 @@
     justify-content: center;
     align-items: center;
     width: 100%;
+    background-color: white;
+    border-radius: 7px;
+    color:black;
     h2,h3,h4{
         margin: 0;
         align-self: flex-start;
