--- a/src/pages/UserPage/UserPage.module.scss
+++ b/src/pages/UserPage/UserPage.module.scss
@@ -11,6 +11,9 @@
     background-color: white;
     background-size: cover;
     overflow-y: scroll;
+    // background-image: url('../../assets/iosBackgrounds/iosMain.jpg');
+    // background-size: cover;
+
 
 
 }
