--- a/src/components/NavBar/NavBar.module.scss
+++ b/src/components/NavBar/NavBar.module.scss
@@ -7,6 +7,8 @@
     width: 100vw;
     position: fixed;
     //box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
+    // background-image: url('../../assets/iosBackgrounds/iosMain.jpg');
+    // background-size: cover;
     .titles{
 
             color: black;
