--- a/src/components/UserAside/UserAside.module.scss
+++ b/src/components/UserAside/UserAside.module.scss
@@ -9,14 +9,15 @@
     color: black;
     justify-content: space-evenly;
     align-items: center;
-    border: solid 1px white;
+
     animation: fadeIn 0.5s;
     margin:5px;
-    background-color: rgb(230,229,234);
+
     border-radius: 7px;
+
     h1{
         position: relative;
-        color: black;
+        color: white;
     }
     .userPic{
         background-color: white;
@@ -37,7 +38,7 @@
 
         
         p{
-            border: solid 2px white;
+            border: solid 2px ;
             color: white;
             display: flex;
             justify-content: center;
