--- a/src/components/UserPosts/UserPosts.module.scss
+++ b/src/components/UserPosts/UserPosts.module.scss
@@ -7,7 +7,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    border: solid 1px white;
+
     box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
     margin: 5px;
     animation: fadeIn 0.5s;
@@ -26,6 +26,7 @@
             align-items: center;
             font-size: 25px;
             height: 10vh;
+            color: black;
         }
         li{
             border-radius: 7px;
