--- a/src/pages/HomePage/HomePage.module.scss
+++ b/src/pages/HomePage/HomePage.module.scss
@@ -6,6 +6,9 @@
     display: flex;
     justify-content: space-evenly;
     align-items: center;
+    // background-image: url('../../assets/iosBackgrounds/iosMain.jpg');
+    // background-size: cover;
+    background-color: white;
     .buttonDiv{
         display: flex;
         flex-direction: column;
@@ -35,6 +38,7 @@
                 width: 12.5vw;
                 border-radius: 7px;
                 margin: 2px;
+                color:black;
                 background-color: white;
 
             }
@@ -46,6 +50,7 @@
             height: 50px;
             position: relative;
             border-radius: 100px;
+            color: black;
             background-color: white;
             border-color: white;
             box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
@@ -58,14 +63,13 @@
         position: fixed;
         padding-left: 2.5vw;
         padding-right: 2.5vw;
-        color: white;
+        color: black;
         font-size: 25px;
-        color:white;
+
         top:3vmin;
         border-radius: 7px;
         z-index: 1;
-        background-color:white;
-        color: black;
+        
 
     }
     .hidden{
