--- a/src/pages/ForumPage/ForumPage.module.scss
+++ b/src/pages/ForumPage/ForumPage.module.scss
@@ -1,13 +1,92 @@
 .ForumPage{
-    background-color: blue;
-    position: absolute;
-    margin-top: 60px;
-    right: 60px;
-    width: 70vw;
-    height: 80vh;
-    border-radius: 15px;
+    position: relative;
     display: flex;
     flex-direction: column;
+    justify-content: flex-start;
+    top:5vmin;
     align-items: center;
-    justify-content: center;
+    width: 100vw;
+    position: fixed;
+    height: 100vh;
+    background-color: white;
+    background-size: cover;
+    overflow-y: scroll;
+    header{
+        color: black;
+        padding: 10px;
+        padding-left: 5vw;
+        width: 100vw;
+        h1{}
+        h2{}
+        h3{}
+        h4{}
+        section{
+            display: flex;
+            justify-content: center;
+
+            button{
+                margin: 10px;
+            }
+        }
+        
+    }
+    ul{
+        position: relative;
+        overflow-y: scroll;
+        box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
+        border-radius: 7px;
+        padding: 50px;
+
+        width: 80vw;
+        li{
+
+        }
+    }
+}
+
+@media(max-width:900px){
+    .ForumPage{
+        background-color: white;
+        width: 100vw;
+        height: 100vh;
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-start;
+        align-items: center;
+        color:black;
+        position: fixed;
+        top:0;
+        header{
+    
+            padding: 10px;
+            padding-left: 5vw;
+            width: 100vw;
+            height: 100vh;
+            h1{}
+            h2{}
+            h3{}
+            h4{}
+            section{
+                display: flex;
+                justify-content: center;
+    
+                button{
+                    margin: 10px;
+                }
+            }
+            
+        }
+        ul{
+            width: 80vw;
+            height: 100vh;
+            overflow-y: scroll;
+            box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
+            border-radius: 7px;
+            padding: 50px;
+    
+            li{
+    
+            }
+        }
+    }
 }
