--- a/src/pages/HomePage/HomePage.module.scss
+++ b/src/pages/HomePage/HomePage.module.scss
@@ -18,13 +18,15 @@
         top:10vh;
         position: absolute;
         width: 20vw;
-        height: 50vh;
-
+        height: 80vh;
+        h4{
+            color: black;
+        }
 
             ul{
                 box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
                 width:15vw;
-                height: 40vh;
+                height:80vh;
                 border-radius: 7px;
                 display: flex;
                 justify-content: flex-start;
@@ -115,6 +117,10 @@
 }
 @media (max-width:900px) {
     .HomePage{
+        h4{
+            opacity: 0;
+            width: 20px;
+        }
         #name{
             padding-left: 20vw;
         }
