--- a/src/components/Post/Post.module.scss
+++ b/src/components/Post/Post.module.scss
@@ -12,9 +12,13 @@
         align-self: flex-start;
         padding-left: 1vw;
     }
+    h4{
+        align-self: flex-end;
+        padding-right: 1vw;
+    }
     p{
         width: 55vw;
-        height: 35vh;
+        height: 40vh;
         border-radius: 7px;
         background-color: rgb(230,229,234);
         display: flex;
@@ -44,7 +48,7 @@
             padding-left: 1vw;
         }
         p{
-            width: 55vw;
+            width: 80vw;
             background-color: rgb(230,229,234);
             height: 40vh;
         }
