--- a/src/pages/LoginPage/LoginPage.module.scss
+++ b/src/pages/LoginPage/LoginPage.module.scss
@@ -1,7 +1,9 @@
 .LoginPage{
     font-family: 'Orbitron', sans-serif;
-    background-image: url('../../assets/iosBackgrounds/iosMain.jpg');
+    //background-image: url('../../assets/iosBackgrounds/iosMain.jpg');
+    background-image: url('../../assets/waves.png');
 
+    color:black;
     display: flex;
     flex-direction: column;
     left: 0;
@@ -23,7 +25,7 @@
         display: flex;
         justify-content: center;
         align-items: center;
-
+        color:black;
         font-size: 50px;
         animation: fadeIn1 5s;
         font-weight:100;
@@ -41,7 +43,7 @@
             display: flex;
             justify-content: center;
             
-            color:white;
+            color:black;
         }
         
         .make{
